--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.3",
+    "seedrandom": "^3.0.5",
     "typescript": "^4.2.3",
     "web-vitals": "^1.0.1"
   },
